@@ -2,5 +2,9 @@ mime_DATA	= revelation.xml
 mimedir		= $(datadir)/mime/packages
 
 install-data-hook:
-	update-mime-database $(datadir)/mime
+if FDO_MIME
+	@if test -z "$(DESTDIR)"; then \
+		$(UPDATE_MIME_DATABASE) "$(datadir)/mime"; \
+	fi
+endif
 
