@@ -4,10 +4,12 @@ xxxx-xx-xx: Revelation 0.4.0-pre2
 Bugfixes:
 - allow entry drag'n'drop to folder directly before/after entry
 - place Revelation under Accessories in the GNOME menu (Utility category)
-- build authmanager module with position-independent code
-- don't install authmanager module into bindir
 - install mimetype icon into correct directory
 - run update-desktop-database on install, to register app for mimetype
+- don't install authmanager module into bindir
+- build authmanager module with position-independent code
+- allow installation when fd.o shared MIME utils are missing
+- don't update MIME databases at build-time if DESTDIR is set
 
 Code changes:
 - updated unit tests for ui module
