@@ -2,6 +2,13 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.4.0-pre2 ]---------------
 
+2005-01-29  Erik Grinaker <erikg@codepoet.no>
+
+	* check for fd.o shared MIME utils at build-time, and avoid
+	rebuilding MIME databases if not found
+
+	* don't update MIME databases at build-time if DESTDIR is set
+
 2005-01-28  Erik Grinaker <erikg@codepoet.no>
 
 	* run update-desktop-database on make install so that
